--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,11 @@
-<!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+<view>
+  输入数字：
+  <block>
+    <!--input onchange 焦点转移的时候才触发 keyup能保证输入内容后再调用函数-->
+    <input class='input' type="text" id="inputNumber" value="" bindinput="checkNumber" auto-focus></input>
+  </block>
+  转换结果：
+  <block>
+    <input class='input' type="text" id="output" value="{{inputTxt}}"></input>
+  </block>
 </view>
